# PGM-index

./: CMakeLists.txt  keygen  pla  plr  poc.txt
examples/: CMakeLists.txt  debug_file_simple.cpp  ext_simple.cpp  file_simple.cpp  simple.cpp  updates.cpp
include/pgm/: pgm_index.hpp  piecewise_linear_model.hpp
test/: catch.hpp
